2008-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* support/devel/sak/validate/syntax.tcl: Do not try to check TeX
	  files for Tcl syntax.

	* support/devel/sak/validate/syntax.tcl: New code, syntax checking
	  via tclchecker.
	* support/devel/sak/validate/validate.tcl: Activated new
	  validation module.

	* support/devel/sak/validate/manpages.tcl: Skip tcllibc.
	* support/devel/sak/validate/testsuites.tcl: Skip tcllibc.

	* support/devel/sak/util/feedback.tcl: Flush log lines.

	* sak.tcl (ppackages): Added code to recognize a pragma '@sak
	  notprovided' which we can use to mark the packages which have
	  provide statements yet are not really visible and thus not
	  indexed.

	* modules/sha1/sha256c.tcl: Added notprovided pragmas to the
	* modules/sha1/sha1c.tcl: critcl based package implementations
	* modules/md5/md5c.tcl: and the pseudo-packages declared by
	* modules/struct/graph_c.tcl: plugin management code.
	* modules/struct/tree_c.tcl:
	* modules/struct/sets_c.tcl:
	* modules/dns/ipMoreC.tcl:
	* modules/md5crypt/md5cryptc.tcl:
	* modules/rc4/rc4c.tcl:
	* modules/crc/crcc.tcl:
	* modules/base64/base64c.tcl:
	* modules/md4/md4c.tcl:
	* modules/page/peg_grammar.tcl:
	* modules/page/pluginmgr.tcl:

2008-03-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* support/installation/modules.tcl: Added 'simulation' to the list
	  of official modules.

	* support/devel/sak/validate/versions.tcl: New code for the
	  comparison of indexed versus provides packages.
	* support/devel/sak/validate/validate.tcl: Activated new
	  validation module.

	* support/devel/sak/validate/testsuites.tcl: Reworked log format.
	* support/devel/sak/validate/manpages.tcl:   Reworked log format.

2008-03-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* support/devel/sak/validate/help.txt: Clarified that testsuite
	  validation is not testsuite execution.

	* support/devel/sak/validate/validate.tcl: Added testsuite